fix in index.html missing subheading

--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@ border:1px solid;
 	<h1>Bitstarter Title</h1>
 	</div>
       </div>
+    <div class="row subheading">
+      <div class="span12">
+	<p class="lead">This is my first bitstarter project.</p>
+	</div>
+      </div>
     <div class="row pitch">
       <div class="span6 video">
 	Video
 	</div>
-      <div class="span6">
-	<div class="thermometer">
+      <div class="div">
+	<span6 class="thermometer">
 	  Thermometer
 	  </div>
 	<div class="order">
