--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ border:1px solid;
       <div class="span6 video">
 	Video
 	</div>
-      <div class="div">
+      <div class="span6">
 	<span6 class="thermometer">
 	  Thermometer
 	  </div>
