--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ border:1px solid;
 	Video
 	</div>
       <div class="span6">
-	<span6 class="thermometer">
+	<div class="thermometer">
 	  Thermometer
 	  </div>
 	<div class="order">
